--- a/app/templates/subscriptions.hbs
+++ b/app/templates/subscriptions.hbs
@@ -1,6 +1,6 @@
 <section class="section">
   <div class="container">
-    <h1 class="title">Title</h1>
+    <h1 class="title">{{app-title}}</h1>
 
     {{outlet}}
   </div>
