Pick from feeds, show URL in preview

--- a/app/templates/subscriptions/new.hbs
+++ b/app/templates/subscriptions/new.hbs
@@ -1,5 +1,13 @@
 <h3 class="subtitle">Pitch</h3>
 
-{{feed-search}}
+<div class="columns">
+  <div class="column">
+    {{feed-search}}
+  </div>
+
+  <div class="column">
+    {{sms-preview}}
+  </div>
+</div>
 
 {{outlet}}
