--- a/app/templates/components/feed-search.hbs
+++ b/app/templates/components/feed-search.hbs
@@ -1,8 +1,27 @@
-<div class="field">
-  <div class="control">
-    {{input
-      class="input"
-      placeholder="Search for your gym, or paste a URL"
-      key-up=(action 'search')}}
-  </div>
-</div>
+<nav class="panel">
+  {{#if newSubscription.feed}}
+    <div class="panel-block is-active">
+      <a class="panel-icon" {{action 'clearFeed'}}>
+        <i class="fa fa-times-circle" aria-hidden="true"></i>
+      </a>
+      {{newSubscription.feed.name}}
+    </div>
+  {{else}}
+    <div class="panel-block">
+      <div class="field">
+        <div class="control">
+          {{input
+          class="input"
+          placeholder="Search for your gym, or paste a URL"
+          key-up=(action 'search')}}
+        </div>
+      </div>
+    </div>
+
+    {{#each results as |feed|}}
+      <a class="panel-block" {{action 'pickFeed' feed}}>
+        {{feed.name}}
+      </a>
+    {{/each}}
+  {{/if}}
+</nav>
