Improve mobile formatting

--- a/app/templates/subscriptions.hbs
+++ b/app/templates/subscriptions.hbs
@@ -1,6 +1,10 @@
-<section class="section">
+<section class="section has-text-centered-mobile">
   <div class="container">
-    <h1 class="title">{{app-title}}</h1>
+    <div class="columns">
+      <div class="column">
+        <h1 class="title">{{app-title}}</h1>
+      </div>
+    </div>
 
     {{outlet}}
   </div>
