--- a/app/templates/subscriptions/new.hbs
+++ b/app/templates/subscriptions/new.hbs
@@ -1,4 +1,8 @@
-<h3 class="subtitle">Pitch</h3>
+<div class="columns">
+  <div class="column">
+    <h3 class="subtitle">Get texts when your gym posts a new workout</h3>
+  </div>
+</div>
 
 <div class="columns">
   <div class="column">
