--- a/app/templates/components/sms-preview.hbs
+++ b/app/templates/components/sms-preview.hbs
@@ -1,3 +1,24 @@
-{{#if newSubscription.feed}}
-  {{newSubscription.feed.url}}
-{{/if}}
+<article class="message is-dark">
+  <div class="message-header">
+    <p>Preview</p>
+  </div>
+  <div class="message-body">
+    <h5 class="title is-5 has-text-centered">SMS from (123) 456-7890</h5>
+
+    <div class="columns is-mobile level">
+      <div class="column is-half-mobile level-item">
+        <div class="notification is-success has-text-left">
+          {{#if subscription.includeTitle}}
+            {{feed.name}}<br><br>
+          {{/if}}
+
+          {{{preview}}}
+        </div>
+      </div>
+      <div class="column level-item is-size-7 has-text-right">
+        10:23 AM
+        {{!-- {{timestamp}} --}}
+      </div>
+    </div>
+  </div>
+</article>
