--- a/app/templates/components/sms-preview.hbs
+++ b/app/templates/components/sms-preview.hbs
@@ -16,8 +16,7 @@
         </div>
       </div>
       <div class="column level-item is-size-7 has-text-right">
-        10:23 AM
-        {{!-- {{timestamp}} --}}
+        {{sms-timestamp}}
       </div>
     </div>
   </div>
