--- a/app/templates/components/sms-preview.hbs
+++ b/app/templates/components/sms-preview.hbs
@@ -1,18 +1,16 @@
 <article class="message is-dark">
-  <div class="message-header">
-    <p>Preview</p>
-  </div>
   <div class="message-body">
-    <h5 class="title is-5 has-text-centered">SMS from (123) 456-7890</h5>
+    <p class="is-size-7">Preview</p>
+    <h5 class="title is-5 has-text-centered">Message from (123) 456-7890</h5>
 
     <div class="columns is-mobile level">
-      <div class="column is-half-mobile level-item">
-        <div class="notification is-success has-text-left">
-          {{#if subscription.includeTitle}}
-            {{feed.name}}<br><br>
+      <div class="column is-two-thirds level-item">
+        <div class="notification {{if isLoading '' 'is-success'}} has-text-left">
+          {{#if preview}}
+            {{{render-preview preview}}}
+          {{else}}
+            No preview
           {{/if}}
-
-          {{{preview}}}
         </div>
       </div>
       <div class="column level-item is-size-7 has-text-right">
