--- a/app/templates/subscriptions/new.hbs
+++ b/app/templates/subscriptions/new.hbs
@@ -7,15 +7,31 @@
 <div class="columns">
   <div class="column">
     {{feed-search subscription=model}}
-
-    {{#if model.feed}}
-      {{subscription-options subscription=model}}
-    {{/if}}
+    {{subscription-options subscription=model}}
   </div>
 
-  {{#if model.feed}}
-    <div class="column">
-      {{sms-preview subscription=model}}
-    </div>
-  {{/if}}
+  <div class="column">
+    {{sms-preview subscription=model}}
+  </div>
 </div>
+
+<div class="field">
+  <div class="control has-icons-left">
+    {{input type="tel" class="input is-medium" placeholder="Phone Number"}}
+    <span class="icon is-medium is-left">
+      <i class="fa fa-mobile"></i>
+    </span>
+  </div>
+</div>
+
+<div class="field">
+  <div class="control">
+    <button class="button is-medium is-black" {{action 'confirmSubscriptionOptions'}}>
+      Sign Up
+    </button>
+  </div>
+</div>
+
+{{#if confirmedSubscriptionOptions}}
+  Done!
+{{/if}}
