Remove URL from placeholder

--- a/app/templates/components/feed-search.hbs
+++ b/app/templates/components/feed-search.hbs
@@ -11,7 +11,7 @@
       <div class="control">
         {{input
           class="input is-medium"
-          placeholder="Search for your gym, or paste a URL"
+          placeholder="Search for your gym's workout feed"
           key-up=(action 'search')}}
       </div>
     </div>
