Preview working with server

--- a/app/templates/components/sms-preview.hbs
+++ b/app/templates/components/sms-preview.hbs
@@ -13,7 +13,7 @@
           {{/if}}
         </div>
       </div>
-      <div class="column level-item is-size-7 has-text-right">
+      <div class="column level-item is-size-7 has-text-right timestamp">
         {{sms-timestamp}}
       </div>
     </div>
