Working auth flow, /auth test route

--- a/app/templates/subscriptions/new.hbs
+++ b/app/templates/subscriptions/new.hbs
@@ -21,29 +21,25 @@
 </div>
 
 {{#if feedPicked}}
-  <div class="field">
-    <div class="control has-icons-left">
-      {{input type="tel" class="input is-medium" placeholder="4846863735" disabled=true}}
-      <span class="icon is-medium is-left">
-        <i class="fa fa-mobile"></i>
-      </span>
-    </div>
-  </div>
+  {{auth-status}}
+  {{authentication.isAuthenticated}}
 
-  <div class="field">
-    <div class="control">
-      <button
-         class="button is-medium is-black {{if isLoading 'is-loading'}}"
-         {{action 'signUp'}}
-         disabled={{isLoading}}>
-        Sign Up
-      </button>
+  {{#if authentication.isAuthenticated}}
+    <div class="field">
+      <div class="control">
+        <button
+           class="button is-medium is-black {{if isLoading 'is-loading'}}"
+           {{action 'signUp'}}
+           disabled={{isLoading}}>
+          Sign Up
+        </button>
 
-      <div class="has-text-danger">
-        {{#if hasError}}
-          {{error}}
-        {{/if}}
+        <div class="has-text-danger">
+          {{#if hasError}}
+            {{error}}
+          {{/if}}
+        </div>
       </div>
     </div>
-  </div>
+  {{/if}}
 {{/if}}
