Post subscription to /preview

--- a/app/templates/components/sms-preview.hbs
+++ b/app/templates/components/sms-preview.hbs
@@ -1,3 +1,5 @@
+{{feed}}
+{{subscriptionOptions}}
 <article class="message is-dark">
   <div class="message-body">
     <p class="is-size-7">Preview</p>
