--- a/app/templates/components/auth-status.hbs
+++ b/app/templates/components/auth-status.hbs
@@ -37,6 +37,15 @@
           </button>
         </div>
       </div>
+      <div class="field is-grouped is-grouped-centered">
+        <div class="control">
+          <button
+            class="button is-small is-success"
+            {{action "signOut"}}>
+            Cancel
+          </button>
+        </div>
+      </div>
     </div>
     <button class="modal-close is-large" aria-label="close"></button>
   </div>
@@ -81,7 +90,7 @@
           <div class="control">
             <button
               class="button is-small is-success"
-              {{action "verifyCode"}}>
+              {{action "signOut"}}>
               Cancel
             </button>
           </div>
@@ -92,7 +101,7 @@
   </div>
 {{else if isSigningIn}}
   <button class="button is-medium is-success is-loading" disabled>
-    1234567890
+    Signing in...
   </button>
 {{else if isSignedIn}}
   <button
