--- a/app/templates/components/subscription-options.hbs
+++ b/app/templates/components/subscription-options.hbs
@@ -3,6 +3,15 @@
     <div class="field">
       <div class="control">
         <label class="checkbox">
+          {{input type="checkbox" checked=subscription.includeFeedName}}
+          Include Feed Name
+        </label>
+      </div>
+    </div>
+
+    <div class="field">
+      <div class="control">
+        <label class="checkbox">
           {{input type="checkbox" checked=subscription.includeTitle}}
           Include Title
         </label>
@@ -14,6 +23,15 @@
         <label class="checkbox">
           {{input type="checkbox" checked=subscription.shortenCommonTerms}}
           Shorten Common Terms
+        </label>
+      </div>
+    </div>
+
+    <div class="field">
+      <div class="control">
+        <label class="checkbox">
+          {{input type="checkbox" checked=subscription.includeLink}}
+          Include Link
         </label>
       </div>
     </div>
