--- a/app/templates/components/sms-preview.hbs
+++ b/app/templates/components/sms-preview.hbs
@@ -3,12 +3,16 @@
     <p class="is-size-7">Preview</p>
     <h5 class="title is-5 has-text-centered">Message from (123) 456-7890</h5>
 
-    <div class="notification is-success has-text-left">
-      {{#if displayPreview}}
+    {{#if displayPreview}}
+      <div class="notification is-success has-text-left">
         {{{render-preview preview}}}
-      {{else}}
-        No preview
-      {{/if}}
-    </div>
+      </div>
+
+      <p class="is-size-7 has-text-right">
+        {{preview.length}}/{{subscription.characterLimit}} characters
+      </p>
+    {{else}}
+      No preview
+    {{/if}}
   </div>
 </article>
