Add hamburger nav toggle

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,11 +1,17 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     {{#link-to "subscriptions.new" class="navbar-item"}}
-      <h1 class="title">{{app-title}}</h1>
+      <h1 class="title has-text-primary">{{app-title}}</h1>
     {{/link-to}}
+
+    <div class="navbar-burger" {{action "toggleNav"}}>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </div>
 
-  <div class="navbar-menu">
+  <div class="navbar-menu {{ if navIsActive 'is-active'}}">
     <div class="navbar-start">
       {{#link-to "subscriptions.new" class="navbar-item"}}
         Find Your Gym
