--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import "bulma/sass/utilities/initial-variables";
 @import "bulma/sass/utilities/functions";
 @import "bulma/bulma";
+@import "_checkbox";
 
 #flash-messages {
   position: fixed;
