--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     {{#link-to "subscriptions.new" class="navbar-item"}}
-      <h1 class="title has-text-primary">{{app-title}}</h1>
+      <h1 class="title">{{app-title}}</h1>
     {{/link-to}}
 
     <div class="navbar-burger" {{action "toggleNav"}}>
