--- a/app/templates/components/sms-preview.hbs
+++ b/app/templates/components/sms-preview.hbs
@@ -1,4 +1,4 @@
-<article class="message is-dark">
+<article class="message">
   <div class="message-body">
     <p class="is-size-7">Preview</p>
     <h5 class="title is-5 has-text-centered">Message from (123) 456-7890</h5>
