--- a/app/templates/components/sms-preview.hbs
+++ b/app/templates/components/sms-preview.hbs
@@ -4,7 +4,7 @@
     <h5 class="title is-5 has-text-centered">Message from (123) 456-7890</h5>
 
     {{#if displayPreview}}
-      <div class="notification is-success has-text-left">
+      <div class="notification is-success has-text-left {{if loading 'is-loading'}}">
         {{{render-preview preview}}}
       </div>
 
