Update auth button copy

--- a/app/templates/subscriptions/new.hbs
+++ b/app/templates/subscriptions/new.hbs
@@ -21,7 +21,7 @@
 </div>
 
 {{#if feedPicked}}
-  {{auth-status}}
+  {{auth-status buttonText="Verify Phone Number"}}
 
   {{#if authentication.isAuthenticated}}
     <div class="field">
