--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <div class="navbar-menu {{ if navIsActive 'is-active'}}">
+  <div class="navbar-menu {{ if navIsActive 'is-active'}}" {{action "closeNav"}}>
     <div class="navbar-start">
       {{#link-to "subscriptions.new" class="navbar-item"}}
         Find Your Gym
