Auth button color and size fixes

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -30,7 +30,9 @@
         Auth Test
       {{/link-to}}
 
-      {{auth-status}}
+      <div class="navbar-item">
+        {{auth-status}}
+      </div>
     </div>
   </div>
 </nav>
