--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -21,19 +21,19 @@
         Add a Gym
       {{/link-to}}
 
-      <a class="navbar-item">How It Works</a>
-      <a class="navbar-item">Pricing</a>
+      {{!--  <a class="navbar-item">How It Works</a>  --}}
+      {{!--  <a class="navbar-item">Pricing</a>  --}}
     </div>
 
-    <div class="navbar-end">
-      {{#link-to "auth" class="navbar-item"}}
-        Auth Test
-      {{/link-to}}
+    {{!--  <div class="navbar-end">  --}}
+      {{!--  {{#link-to "auth" class="navbar-item"}}  --}}
+        {{!--  Auth Test  --}}
+      {{!--  {{/link-to}}  --}}
 
-      <div class="navbar-item">
-        {{auth-status}}
-      </div>
-    </div>
+      {{!--  <div class="navbar-item">  --}}
+        {{!--  {{auth-status}}  --}}
+      {{!--  </div>  --}}
+    {{!--  </div>  --}}
   </div>
 </nav>
 
