--- a/app/templates/components/feed-search.hbs
+++ b/app/templates/components/feed-search.hbs
@@ -24,15 +24,22 @@
       {{/each}}
     {{else}}
       {{#if query}}
-        <span class="panel-block">
+        <span class="panel-block content">
           {{#if isLoading}}
             Loading...
           {{else}}
-            No results
+            No results for "{{query}}".
           {{/if}}
         </span>
       {{/if}}
     {{/if}}
   {{/if}}
+</div>
+
+<div class="content">
+  <p>
+    Search for your gym's feed, or
+    {{#link-to "feeds.new"}}add a gym{{/link-to}}.
+  </p>
 </div>
 &nbsp;
