Use ember-ajax for authentication

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -25,15 +25,15 @@
       {{!--  <a class="navbar-item">Pricing</a>  --}}
     </div>
 
-    {{!--  <div class="navbar-end">  --}}
+    <div class="navbar-end">
       {{!--  {{#link-to "auth" class="navbar-item"}}  --}}
         {{!--  Auth Test  --}}
       {{!--  {{/link-to}}  --}}
 
-      {{!--  <div class="navbar-item">  --}}
-        {{!--  {{auth-status}}  --}}
-      {{!--  </div>  --}}
-    {{!--  </div>  --}}
+      <div class="navbar-item">
+        {{auth-status}}
+      </div>
+    </div>
   </div>
 </nav>
 
