--- a/app/templates/subscriptions/new.hbs
+++ b/app/templates/subscriptions/new.hbs
@@ -48,6 +48,6 @@
       </div>
     </div>
   {{else}}
-    {{auth-status buttonText="Verify Phone Number"}}
+    {{auth-button buttonText="Verify Phone Number"}}
   {{/if}}
 {{/if}}
