--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,5 @@
+{{auth-modal}}
+
 <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     {{#link-to "subscriptions.new" class="navbar-item"}}
@@ -37,7 +39,7 @@
       {{!--  {{/link-to}}  --}}
 
       <div class="navbar-item">
-        {{auth-status}}
+        {{auth-button}}
       </div>
     </div>
   </div>
