Phone number inputs for mobile

--- a/app/templates/components/auth-modal.hbs
+++ b/app/templates/components/auth-modal.hbs
@@ -5,9 +5,10 @@
       <div class="field is-grouped is-grouped-centered">
         <div class="control has-icons-left">
           {{input
-          value=smsNumber
-          class="input is-medium"
-          placeholder="SMS Number"}}
+            type="tel"
+            value=smsNumber
+            class="input is-medium"
+            placeholder="SMS Number"}}
 
           <span class="icon is-medium is-left">
             <i class="fa fa-mobile"></i>
@@ -48,6 +49,7 @@
       <div class="field is-grouped is-grouped-centered">
         <div class="control has-icons-left">
           {{input
+            type="tel"
             value=verificationCode
             class="input is-medium"
             placeholder="Verification Code"}}
