--- a/app/templates/components/feed-search.hbs
+++ b/app/templates/components/feed-search.hbs
@@ -12,9 +12,10 @@
     <div class="panel-block">
       <div class="control">
         {{input
-        class="input is-medium"
-        placeholder="Search for your gym's workout feed"
-        key-up=(action 'search')}}
+          class="input is-medium"
+          placeholder="Search for your gym's workout feed"
+          key-up=(action 'search')
+          autofocus="true"}}
       </div>
     </div>
 
