Add footer signature

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -59,3 +59,18 @@
     {{outlet}}
   </div>
 </section>
+
+<footer class="footer">
+  <div class="container">
+    <div class="content has-text-centered">
+      <p>
+        Made with
+        <img src="/assets/emoji-weightlifter.png" alt="weightlifting" height="20" width="20">
+        by
+        <a href="http://justincampbell.me" target="_blank">
+          @justincampbell
+        </a>
+      </p>
+    </div>
+  </div>
+</footer>
