Add contact email to footer

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -64,6 +64,11 @@
   <div class="container">
     <div class="content has-text-centered">
       <p>
+        Have a question, bug report, or feature request?
+        <a href="mailto:contact@wodalert.com">Email us</a>.
+      </p>
+
+      <p>
         Made with
         <img src="/assets/emoji-weightlifter.png" alt="weightlifting" height="20" width="20">
         by
